# deposit_project

./: README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
deposit/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.py  urls.py  wsgi.py
deposit/deposit/: asgi.py  models.py  serializers.py  settings.py  urls.py  views.py
deposit/deposit/back/: calculate.py
deposit/depositapp/: serializers.py  views.py
deposit/depositapp/back/: calculate.py
deposit/tests/test_depositapp/: test_models.py
depositapp/: admin.py  apps.py  models.py  serializers.py  validators.py
depositapp/back/: calculate.py
tests/test_depositapp/: test_back_calculate.py  test_data.py  test_serializers.py  test_validators.py  test_views.py
